# Dispatch

./: .gitignore  LICENSE  Liste.xlsx  Liste_copy.xlsx  README.md  SESSION_SUMMARY.md  aggregate_warnings.py  analysis.csv  analyze_month.py  arbeitslog.md  arbeitsprotokoll.txt  assign_gui.bat  assign_gui.py  gui_app.py  july_analysis.csv  main.py  name_aliases.py  process_calls.py  process_reports.py  pyproject.toml  report.csv  report_2025-07.csv  requirements.txt  run_all.bat  run_all_gui.py  run_current_month.py  run_current_month.pyw  run_dispatch.py  start_dispatch.bat  summarize_calls.py  umgebung
Juli_25/04.07/: 04.07.25 1901.xlsx
Juli_25/10.07/: 10.07.25 0709.xlsx
Juli_25/29.07/: 29.07.25 0700.xlsx
Juni_25/06.06/: 06.06.25 1900.xlsx
Juni_25/09.06/: 09.06.25 0700.xlsx
archive/: run_all.bat
data/: Liste.xlsx  report.xlsx
dispatch/: __init__.py  aggregate_warnings.py  analyze_month.py  create_day_dir.py  main.py  name_aliases.py  or_liste.py  process_calls.py  process_reports.py  requirements.txt  summarize_by_id.py  summarize_calls.py  technicians.py  write_calls.py  write_liste.py
dispatch/tests/: conftest.py  (+17 more)
logs/: SESSION_SUMMARY.md  arbeitsprotokoll.md
results/: 2025-08-06.csv
tests/: test_aggregate_warnings.py  test_analyze_month.py  test_assign_gui_export.py  test_gather_valid_names.py  test_load_calls.py  test_main_missing_files.py  test_main_process_month_cli.py  test_main_year_from_parent.py  test_name_aliases.py  test_process_calls.py  test_process_month.py  test_safe_load_workbook.py  test_summarize_calls.py  test_update_liste.py
(+84 files in other folders)
